// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`u-dynamic-cards.vue > Demo-Mini 自定义 1`] = `
<div class="root root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="mini" style="display: none;">
      <span class="mini-text">
        <span>xxx 8000</span>
      </span>
      <div class="textWrap">
        <span class="error" style="display: none;">false</span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div>
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" direction="horizontal" type vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
        <div class="root" size="huge normal" tabindex="0">
          <span class="baseline">b</span>
          <span class="placeholder" style="display: none;">请选择</span>
          <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
            abc
          </div>
          <transition-stub class="popper" name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div class="wrap">
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  abc
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  def
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  zzz
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="root" size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
      </div>
    </div>
  </div>
  <div class="root" mini="true">
    <div class="mini">
      <span class="mini-text">
        <span>xxx 8000</span>
      </span>
      <div class="textWrap">
        <span class="error" style="display: none;">false</span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div style="display: none;">
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" direction="horizontal" type vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
        <div class="root" size="huge normal" tabindex="0">
          <span class="baseline">b</span>
          <span class="placeholder" style="display: none;">请选择</span>
          <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
            abc
          </div>
          <transition-stub class="popper" name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div class="wrap">
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  abc
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  def
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  zzz
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="root" size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    添加
  </a>
</div>
`;

exports[`u-dynamic-cards.vue > Demo-基本用法 1`] = `
<div class="root root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="mini" style="display: none;">
      <span class="mini-text">xxx</span>
      <div class="textWrap">
        <span class="error" style="display: none;">false</span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div>
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" direction="horizontal" type vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
        <div class="root" size="huge normal" tabindex="0">
          <span class="baseline">b</span>
          <span class="placeholder" style="display: none;">请选择</span>
          <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
            abc
          </div>
          <transition-stub class="popper" name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div class="wrap">
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  abc
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  def
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  zzz
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="root" size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
      </div>
    </div>
  </div>
  <div class="root" mini="true">
    <div class="mini">
      <span class="mini-text">222</span>
      <div class="textWrap">
        <span class="error" style="display: none;">false</span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div style="display: none;">
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" direction="horizontal" type vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
        <div class="root" size="huge normal" tabindex="0">
          <span class="baseline">b</span>
          <span class="placeholder" style="display: none;">请选择</span>
          <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
            def
          </div>
          <transition-stub class="popper" name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div class="wrap">
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  abc
                </div>
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  def
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  zzz
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="root" size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    添加
  </a>
</div>
`;

exports[`u-dynamic-cards.vue > Demo-表单验证 1`] = `
<div class="root root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="mini" style="display: none;">
      <span class="mini-text">-</span>
      <div class="textWrap">
        <span class="error" style="display: none;"></span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div>
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" vusion-slot-name="default">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <div class="root" vusion-slot-name="default">
            <div class="root" color size="huge normal">
              <span class="baseline">b</span>
              <span class="placeholder">URL</span>
              <input class="input" size="huge normal" type="text">
            </div>
            <span class="message" color="error" style="display: none;">false</span>
          </div>
          <div class="root" vusion-slot-name="default">
            <div class="root" color disabled="disabled" size="huge normal" tabindex>
              <span class="baseline">b</span>
              <span class="placeholder">请选择</span>
              <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
              </div>
              <transition-stub class="popper" name="fade" style="width: 100%;">
                <div class="root" style="display: none;">
                  <div class="wrap">
                  </div>
                </div>
              </transition-stub>
            </div>
            <span class="message" color="error" style="display: none;">false</span>
          </div>
          <div class="root" vusion-slot-name="default">
            <div class="root" color size="huge normal">
              <span class="baseline">b</span>
              <span class="placeholder">端口</span>
              <input class="input" size="huge normal" type="text">
            </div>
            <span class="message" color="error" style="display: none;">false</span>
          </div>
        </div>
        <span class="message" color="error" style="display: none;"></span>
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    添加
  </a>
</div>
`;

exports[`u-dynamic-cards.vue > Demo-表单验证 2`] = `
<div class="root root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="mini" style="display: none;">
      <span class="mini-text">-</span>
      <div class="textWrap">
        <span class="error" style="display: none;"></span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div>
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" direction="vertical" gap="small">
        <table class="root table">
          <thead>
            <tr>
              <th width>
                <span>URL</span>
              </th>
              <th width>
                <span>服务</span>
              </th>
              <th width>
                <span>端口</span>
              </th>
              <th>
                <span>描述</span>
              </th>
              <th class="last-column" dynamic="true"></th>
            </tr>
          </thead>
          <tbody>
            <tr class="root row">
              <td class="cell">
                <div class="root" display="block" vusion-slot-name="default">
                  <div class="root" color size="huge full">
                    <span class="baseline">b</span>
                    <span class="placeholder">URL</span>
                    <input class="input" size="huge full" type="text">
                  </div>
                  <span class="message" color="error" style="display: none;">false</span>
                </div>
              </td>
              <td class="cell">
                <div class="root" display="block" vusion-slot-name="default">
                  <div class="root" color size="huge full" tabindex="0">
                    <span class="baseline">b</span>
                    <span class="placeholder" style="display: none;">服务</span>
                    <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
                      abc
                    </div>
                    <transition-stub class="popper" name="fade" style="width: 100%;">
                      <div class="root" style="display: none;">
                        <div class="wrap">
                          <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                            abc
                          </div>
                          <div class="root" style="direction: ltr;" vusion-slot-name="default">
                            def
                          </div>
                          <div class="root" style="direction: ltr;" vusion-slot-name="default">
                            zzz
                          </div>
                        </div>
                      </div>
                    </transition-stub>
                  </div>
                  <span class="message" color="error" style="display: none;">false</span>
                </div>
              </td>
              <td class="cell">
                <div class="root" display="block" vusion-slot-name="default">
                  <div class="root" color size="huge full">
                    <span class="baseline">b</span>
                    <span class="placeholder">端口</span>
                    <input class="input" size="huge full" type="text">
                  </div>
                  <span class="message" color="error" style="display: none;">false</span>
                </div>
              </td>
              <td class="cell">
                <div class="root" display="block" vusion-slot-name="default">
                  <div class="root" color size="huge full">
                    <span class="baseline">b</span>
                    <span class="placeholder">描述</span>
                    <input class="input" size="huge full" type="text">
                  </div>
                  <span class="message" color="error" style="display: none;">false</span>
                </div>
              </td>
              <td class="last-column" dynamic="true">
                <a class="root" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
                </a>
              </td>
            </tr>
          </tbody>
        </table>
        <a class="root add-button" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          添加
        </a>
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    添加
  </a>
</div>
`;

exports[`u-dynamic-cards.vue > Demo-限制数量 1`] = `
<div class="root root" direction="vertical" type vusion-slot-name="default">
  <div class="root">
    <div class="mini" style="display: none;">
      <span class="mini-text">xxx</span>
      <div class="textWrap">
        <span class="error" style="display: none;">false</span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div>
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" direction="horizontal" type vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
        <div class="root" size="huge normal" tabindex="0">
          <span class="baseline">b</span>
          <span class="placeholder" style="display: none;">请选择</span>
          <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
            abc
          </div>
          <transition-stub class="popper" name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div class="wrap">
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  abc
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  def
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  zzz
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="root" size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
      </div>
    </div>
  </div>
  <div class="root" mini="true">
    <div class="mini">
      <span class="mini-text">xxx</span>
      <div class="textWrap">
        <span class="error" style="display: none;">false</span>
        <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
          展开
        </a>
      </div>
    </div>
    <div style="display: none;">
      <div class="actions">
        <div class="root" direction="horizontal" type vusion-slot-name="default">
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            删除
          </a>
          <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
            收起
          </a>
        </div>
      </div>
      <div class="root" direction="horizontal" type vusion-slot-name="default">
        <div class="root" color size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
        <div class="root" size="huge normal" tabindex="0">
          <span class="baseline">b</span>
          <span class="placeholder" style="display: none;">请选择</span>
          <div class="text textEllipsis" style="direction: ltr;" tags-overflow="collapse">
            abc
          </div>
          <transition-stub class="popper" name="fade" style="width: 100%;">
            <div class="root" style="display: none;">
              <div class="wrap">
                <div class="root" selected="selected" style="direction: ltr;" vusion-slot-name="default">
                  abc
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  def
                </div>
                <div class="root" style="direction: ltr;" vusion-slot-name="default">
                  zzz
                </div>
              </div>
            </div>
          </transition-stub>
        </div>
        <div class="root" size="huge normal">
          <span class="baseline">b</span>
          <span class="placeholder"></span>
          <input class="input" size="huge normal" type="text">
        </div>
      </div>
    </div>
  </div>
  <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
    添加
  </a>
</div>
`;
